- Added docker-compose.yaml for postgres DB. - Added create_tables.sql scripts for initializing the DB. - Updated .gitignore to exclude data generated by the PG DB.

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,11 @@ nb-configuration.xml
 .code-workspace
 
 ##############################
+## Postgres data
+##############################
+postgres-data/
+
+##############################
 ## OS X
 ##############################
 .DS_Store
