Changes for setting up the project

--- a/adapters/pom.xml
+++ b/adapters/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>adapters</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>database</module>
+        <module>rest</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
