--- a/application/pom.xml
+++ b/application/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>applicaition</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>applicaition</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -21,13 +22,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
+
+
+		<dependency>
             <groupId>rs.codecraft</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
