--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  flyway:
+    enabled: true
+logging:
+  level:
+    root: debug
