--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -10,5 +10,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        globally_quoted_identifiers: true
   flyway:
     enabled: true
